Added 'Go Back To the Book Store' Hyper link to the Reviews  view by using tag helpers allowing Razor engine to automatically generate the hyperlink

--- a/MVC_Start/Views/Home/Reviews.cshtml
+++ b/MVC_Start/Views/Home/Reviews.cshtml
@@ -19,3 +19,6 @@
 
     <button type="submit">Submit</button>
 </form>
+@*<a href="/"> Go back to the Book Store</a>
+    Follow below to get the razor generate the hyperlink automatically from the Controller*@
+<a asp-controller ="Home" asp-action="Reviews"> Go back to the Book Store</a>
